Added Instructions to the recipe

--- a/recipes/turkey-and-the-wolf.html
+++ b/recipes/turkey-and-the-wolf.html
@@ -28,7 +28,35 @@
             <li>1 slice sandwich cheese</li>
             <li>1 handful salted potato chips</li>
             <li>1 tbs vegetable oil</li>
+            <li>1 tbs butter</li>
         </ul>
-    
+        <h3>Instructions</h3>
+        <p>I recommend <strong>reading the whole recipe before starting</strong>, so you don't mix up steps
+            <ol>
+            <li>Wash the <mark>lettuce</mark> and cut it into small, bite-friendly stripes</li>
+            <li>Add the <mark>oil</mark> to your cold skillet and set it to medium-high.
+                Put the <mark>mortadella</mark> slices in the skillet, that they lay a bit on each other, but don't build yourself a mortadella-tower.
+                When the edges start to bubble, flip the whole mortadella-layer around.
+                Add the <mark>cheese</mark> on top, put in a small shot of water and top the skillet with the lid.
+                Let sit for 1 minute.
+                When the cheese has melted, let your mortadella-cheese-creation slide on the shrettuce</li>
+            <li>Take out another pan and add your tbs <mark>butter</mark>.
+                Set the pan to high heat and as soon as the butter has melted, add you two slices of <mark>bread</mark>.
+                Let them sit for 30 seconds, flip, and let sit for another 30 seconds.
+                If you see smoke rising, they're already done earlier and ready to meet our next two frie... I mean Ingredients.</li>
+            <li>Spread a tsp <mark>mustard</mark> on one slice and a tsp <mark>mayonnaise</mark> on the other.</li>
+            <li>Assemble the sandwich as follows:
+                <ol type="a">
+                    <li>Bread with mayonnaise</li>
+                    <li>Shrettuce</li>
+                    <li>Mortadella-cheese-creation</li>
+                    <li>Handful potato chips</li>
+                    <li>Bread with mustard</li>
+                </ol>
+            </li>
+        </ol></p>
+        <p>Enjoy this beautiful creation with an ice cold can of Root Beer, Cream Soda or any other soda.
+            The main thing is the can.
+            Or maybe it's just my personal preference.</p>
     </body>
 </html>
