Change title for better understanding

--- a/recipes/turkey-and-the-wolf.html
+++ b/recipes/turkey-and-the-wolf.html
@@ -2,16 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin Recipes</title>
+        <title>Odin's Sandwich'</title>
     </head>
     <body>
         <h1>Turkey And The Wolf Sandwich</h1>
-        <img src="../img/Sandwich.jpeg" alt="a sandwich containing mortadella, shrettuce, potato chips and cheese">
+            <img src="../img/Sandwich.jpeg" alt="a sandwich containing mortadella, shrettuce, potato chips and cheese">
         <h2>Why you'll want to make this Sandwich</h2>
             <p>This is one of the best, if not <strong>the best</strong> sandwich I have ever tasted. Actually, I have never been to NOLA and never had the chance to taste the original creation. But this recipe alone, that I've just made up from the picture shown above, is <strong>a gift from god</strong>. The chips make it crunchy, the cheese makes it creamy and holds the mortadella in place (well sort of), the mortadella itself gives this sandwich flavour you haven't tasted anywhere else, the shredded lettuce (shredduce or shrettuce) gives it well deserved freshness and the combination of mustard and mayonnaise compliment each other better than any other sauce. If that description alone doesn't make you hungry, than I don't know what will.</p>
         <h2>The Recipe</h2>
         <h3>Ingredients</h3>
-        <p>This makes one tasty sandwich</p>
+            <p>This makes one tasty sandwich</p>
         <ul>
             <li>bread of your choice
                 <ul>
