Added Ingredient list

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -21,6 +21,41 @@
         <p>Chicken Parm cares.</p>
         <p>Chicken Parm understands.</p>
         <p>Chicken Parm will always be there for you.</p>
-    <h2>Ingredients</h2>
+    <h2>The Recipe</h2>
+    <h3>Ingredients</h3>
+    <h4>Sauce</h4>
+    <ul>
+        <li>1/2 onion, chopped</li>
+        <li>4 garlic cloves</li>
+        <li>Oil</li>
+        <li>3 Tbs tomato paste</li>
+        <li>1 tsp red chili flakes</li>
+        <li>800g can tomatoes</li>
+        <li>1/2 tbs oregano</li>
+        <li>Handful fresh basil</li>
+        <li>250ml water</li>
+        <li>Salt</li>
+        <li>Pepper</li>
+   </ul>
+   <h4>Chicken</h4>
+   <ul>
+    <li>4 chicken breasts</li>
+    <li>4 eggs</li>
+    <li>405 wheat flour</li>
+    <li>Pepper</li>
+    <li>1 tsp garlic powder</li>
+    <li>1/2 tbs oregano</li>
+    <li>1/2 tbs dried basil</li>
+    <li>Panko breadcrumbs</li>
+    <li>250g mozzarella</li>
+    <li>Parmesan</li>
+   </ul>
+   <h4>Other Ingredients</h4>
+   <ul>
+    <li>500g pasta</li>
+    <li>Fresh basil leafs</li>
+    <li>Parmesan</li>
+    <li>2 tbs butter</li>
+   </ul>
 </body>
 </html>
