Add Instructions and correct typos

--- a/recipes/chicken-parm.html
+++ b/recipes/chicken-parm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicken Parm</title>
+    <title>Odin's Chicken Parm</title>
 </head>
 <body>
     <h1>Chicken Parm</h1>
@@ -39,23 +39,55 @@
    </ul>
    <h4>Chicken</h4>
    <ul>
-    <li>4 chicken breasts</li>
-    <li>4 eggs</li>
-    <li>405 wheat flour</li>
-    <li>Pepper</li>
-    <li>1 tsp garlic powder</li>
-    <li>1/2 tbs oregano</li>
-    <li>1/2 tbs dried basil</li>
-    <li>Panko breadcrumbs</li>
-    <li>250g mozzarella</li>
-    <li>Parmesan</li>
+        <li>4 chicken breasts</li>
+        <li>4 eggs</li>
+        <li>405 wheat flour</li>
+        <li>Pepper</li>
+        <li>1 tsp garlic powder</li>
+        <li>1/2 tbs oregano</li>
+        <li>1/2 tbs dried basil</li>
+        <li>Panko breadcrumbs</li>
+        <li>250g mozzarella</li>
+        <li>Parmesan</li>
    </ul>
    <h4>Other Ingredients</h4>
    <ul>
-    <li>500g pasta</li>
-    <li>Fresh basil leafs</li>
-    <li>Parmesan</li>
-    <li>2 tbs butter</li>
+        <li>500g pasta</li>
+        <li>Fresh basil leafs</li>
+        <li>Parmesan</li>
+        <li>50g butter</li>
    </ul>
+   <h3>Instructions</h3>
+   <ol>
+    <li>In a saute pan, saute <mark>1/2 chopped onion</mark> for 3 minutes before adding the <mark>garlic cloves</mark> and saute for 30 seconds before adding 3 tablespoons of tomato paste and a shake of red chili flakes.
+        Saute for 1 minute.</li>
+    <li>Add in the <mark>800g of canned tomatoes</mark>, stir in and crush the tomatoes up and place over medium heat.
+        Bring up to a simmer then lowering the heat to maintain a bare bubble.</li>
+    <li>Add <mark>1/2 tbs dried oregano</mark>, a couple of stems of <mark>fresh basil</mark> and <mark>250ml water</mark>.
+        Stir to combine and let simmer for 45 minutes.
+        (Now is a good time to start with the chicken).</li>
+    <li>Taste for seasoning adding in <mark>salt</mark> and <mark>freshly ground black pepper</mark> as needed.
+        Fish out any basil stems and set aside keeping warm until ready to serve.</li>
+    <li>Butterfly <mark>4 large chicken breasts</mark> on your cutting board.
+        Lay a layer of plastic wrap over the chicken and pound the breasts out.
+        Be careful not to tear them apart.</li>
+    <li><mark>Salt</mark> and <mark>pepper</mark> before setting aside on a baking sheet while preparing the breading station.</li>
+    <li>For breading, crack <mark>4 eggs</mark> along with <mark>a sprinkle of 405 wheat flour</mark> in one bowl (beat together), <mark>405 wheat flour</mark> with <mark>freshly ground black pepper</mark> and <mark>1 tsp of garlic powder</mark>, <mark>1/2 tbs dried oregano</mark> and <mark>1/2 tbs dried basil</mark> whisked together in another bowl, and spread <mark>panko bread crumbs</mark> crumbs on a rimmed baking sheet with <mark>a sprinkle of parmesan cheese</mark>.</li>
+    <li>Dip the chicken breasts into the flour then egg before covering every inch with panko breadcrumbs.</li>
+    <li>Set the breadcrumbs coated chicken aside until ready to fry. (Now is good time to start boiling water for pasta).</li>
+    <li>Heat a quart of peanut oil to 175°C, drop in the chicken and fry for roughly 5 minutes or deeply golden brown.
+        Drain on paper towels once finished.</li>
+    <li>Place the chicken onto a wire rack in a rimmed baking sheet and top with <mark>fresh basil</mark>, slices of <mark>fresh mozzarella</mark>, and freshly grated <mark>parmesan cheese</mark>.
+        Place in the broiler for just a few minutes until the cheese is melted and slightly golden brown.</li>
+    <li>Place a few generous ladles full of pasta sauce in the saucepan over medium heat.</li>
+    <li>Once the pasta is a minute shy of doneness and the sauce is bubbling, add in the pasta along with 1/4 cup of pasta water.
+        Stir to combine and cook until done.</li>
+    <li>Once the pasta is done cooking, kill the heat and add in freshly <mark>chopped basil</mark>, freshly shaved <mark>parmesan</mark>, and <mark>50g of butter</mark>.
+        Mix until combined.</li>
+    <li>Add the pasta to a plate topped with the fried chicken.
+        Top the chicken with a few spoons full of pasta sauce, grated parmesan cheese, and fresh chopped basil.
+        Enjoy.</li>
+   </ol>
+
 </body>
 </html>
