Fix typo in title

--- a/recipes/turkey-and-the-wolf.html
+++ b/recipes/turkey-and-the-wolf.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Odin's Sandwich'</title>
+        <title>Odin's Sandwich</title>
     </head>
     <body>
         <h1>Turkey And The Wolf Sandwich</h1>
