--- a/recipes/Reibekuchen.html
+++ b/recipes/Reibekuchen.html
@@ -13,5 +13,14 @@
             So I'm sticking with Reibekuchen throughout this recipe.</p>
         <h2>The Recipe</h2>
         <h3>Ingredients</h3>
+        <ul>
+            <li>1.5kg potatoes</li>
+            <li>3 onions</li>
+            <li>~200g 405 wheat flour</li>
+            <li>2 eggs</li>
+            <li>Salt</li>
+            <li>Pepper</li>
+            <li>Oil</li>
+        </ul>
     </body>
 </html>
