--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/turkey-and-the-wolf.html">Turkey and the Wolf Sandwich</a>
+        <ul>
+            <li><a href="recipes/turkey-and-the-wolf.html" target="_blank" rel="noopener noreferrer">Turkey and the Wolf Sandwich </a></li>
+            <li><a href="recipes/chicken-parm.html" target="_blank" rel="noopener noreferrer">Chicken Parm</a></li>
+            <li><a href="recipes/Reibekuchen.html" target="_blank" rel="noopener noreferrer">Reibekuchen</a></li>
+        </ul>
+        
     </body>
 </html>
