Add Instructions and topping under Ingredients

--- a/recipes/Reibekuchen.html
+++ b/recipes/Reibekuchen.html
@@ -8,7 +8,7 @@
         <h1>Reibekuchen</h1>
             <img src="../img/Reibekuchen.jpeg" alt="An image of three <em>Reibekuchen</em> with applesauce on the side">
         <h2>Why you'll want to make <em>Reibekuchen</em></h2>
-            <p>There just isn't anything better than coming home from a walk on a rainy afternoon and warming yourself up with a couple of <em>Reibekuchen</em>.
+            <p>There just isn't anything better than coming home from a walk on a rainy afternoon and warming yourself up with a couple of freshly baked <em>Reibekuchen</em>.
             The english translation <em>potato pancake</em> sounds like somethings children would cook, if they were allowed to mix anything together.
             So I'm sticking with Reibekuchen throughout this recipe.</p>
         <h2>The Recipe</h2>
@@ -21,6 +21,32 @@
             <li>Salt</li>
             <li>Pepper</li>
             <li>Oil</li>
+            <li>Topping of your choice:
+                <ul>
+                    <li>Molasses</li>
+                    <li>Sour cream and chives</li>
+                    <li>Apple sauce</li>
+                </ul>
+            </li>
         </ul>
+        <h3>Instructions</h3>
+        <ol>
+            <li>Wash the <mark>potatoes</mark> and remove anything, that doesn't look edible. Like sprouts, green marks, ingrown soil etc.</li>
+            <li>Coarsely grate potatoes, chop and add the <mark>onions</mark> to the grated potatoes.</li>
+            <li>Add a lot of <mark>salt</mark>> (trust me, it's 1.5kg of potatoes. They need it) and a bit of <mark>pepper</mark>.</li>
+            <li>Crack in the 2 <mark>pepper</mark> and mix everything together.</li>
+            <li>Now add the <mark>flour</mark> bit by bit.
+                I recommend starting with 4 tbs, mixing everything together.
+                If you feel, that the mass needs more flour, you can add more right away or you fry the first portion and then see if the <em>Reibekuchen</em> need more flour.</li>
+            <li>Heat your pan to medium-high and add <mark>4-5 tbs oil</mark>.</li>
+            <li>As soon as the oil starts shimmering in your frying pan, add a generous tbs of your potato-mixture to the pan (<strong>Caution! Hot oil!</strong>), making one portion.
+                You'll want to have 3 - 4 portions at all times in your frying pan, almost swimming in oil.
+                Flip the Reibekuchen after 3 - 4 minutes.
+                Remember to add more oil, if they start to smoke too much.
+                As soon as they are golden brown on both sides, put them down on a plate with a paper towel on it.
+                Cover with another layer of paper towel and set aside.</li>
+            <li>Repeat this process until done.</li>
+            <li>Put a couple of perfectly cooked Reibekuchen on your plate and add them with the <mark>topping</mark> of your choice.</li>
+        </ol>
     </body>
 </html>
